tests/fail/fork-no-inner-test.rs
// Copyright (C) 2025 Daniel Mueller <deso@posteo.net>
// SPDX-License-Identifier: (Apache-2.0 OR MIT)

#[test_fork::fork]
fn missing_test() {}

fn main() {}
