tests/fail/fork-no-inner-test.stderr
error: test_fork::fork requires an inner #[test] attribute
 --> tests/fail/fork-no-inner-test.rs:4:1
  |
4 | #[test_fork::fork]
  | ^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `test_fork::fork` (in Nightly builds, run with -Z macro-backtrace for more info)
